@@ -14,11 +14,11 @@ The first items associated with a Story are the properties that you select/enter
 </p>
 
 <ul>
-<li><b>Type:</b> Type refers to your Story Type. Select the type of Story you'd like to create, such as Feature Article. Story Type is a required field.</li>
+<li><b>Type:</b> Type refers to your Story Type. Select the kind of Story you'd like to create, such as Feature Article. This is a required field, and some of the fields below will be absent from your screen until you make a selection.</li>
 <li><b>Title:</b> This is the Title of your Story. Depending on the Story Type it may appear directly in the output. The Title is a required field.</li>
-<li><b>Slug:</b> The slug is a one-word identifier used as the last part of the Story's URI, and the directory in which the story resides. Some Story Types require a slug. For those that do not, you may choose to make a Story a Category Index by checking the box to the right of the slug field. The URL of the Category plus the slug (if any) form the complete URL of the Story, which must be unique.</li>
+<li><b>Slug:</b> The slug is a one-word identifier used by some Story Types as the last part of the Story's URL, and the directory in which the story resides. For Story Types that do not require a slug, you may choose to make a Story a Category Index by checking the box to the right of the slug field. The URL of the Category plus the slug (if any) form the complete URL of the Story, which must be unique. (NOTE: If the Slug field is not present on your screen, that means the Type you've selected prohibits slug use.)</li>
 <li><b>Cover Date:</b> When creating a New Story, select a Cover Date. The cover Date defaults to the current date and time, but it can be modified to a future or previous date. The cover date is a required field and may appear on some Story Types directly in the URL or the page.</li>
-<li><b>Site/Category:</b> Every Story must be located in a site and category. Clicking the <i>Choose</i> button will launch a menu tree where you can find the correct category. From the menu tree click <i>OK</i> to accept your choice and close the function or <i>Cancel</i> to return to the New Story page.</li>
+<li><b>Site/Category:</b> Every Story must be located in a site and category. Clicking the <i>Choose</i> button will launch a menu tree where you can find the correct category. From the menu tree, click <i>OK</i> to accept your choice or <i>Cancel</i> to return to the New Story page. (NOTE: If the Site/Category field is not present on your screen, that means the Type you've chosen auto-selects a category based on the other fields. If it's present but there's no asterisk signaling that it's a required field, that means you may choose a category or leave it blank to have one auto-selected.)</li>
 </ul>
 
 <p>
